# navier-stokes-vorticity-stream-formulation

./: Cargo.toml
src/: main.rs  rendering.rs  shader.wgsl
