[package]
name = "navier-stokes-vorticity-stream-formulation"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
faer = "0.23.2"
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"


#[lib]
#crate-type = ["cdylib", "rlib"]

 

 